<resources>
    <string name="app_name">planner</string>
    <string name="add_node">Add Node</string>
    <string name="title">Title...</string>
    <string name="description">Description...</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="null_input">Please fill empty fields</string>
    <string name="select_date">Select Date...</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="card_title">Card Title</string>
    <string name="des1">Description</string>
    <string name="acp">Activity already present</string>
</resources>
